--- a/DHL/css/style_2.css
+++ b/DHL/css/style_2.css
@@ -16,21 +16,16 @@ h1{
     margin-top: 188px;
 }
 
-.wrapper{
-    width: 1920px;
-}
-
 .header-top-back{
-    width: 1920px;
     height: 50px;
     background-color: #ba0000;
 }
 
 .header-top-contant{
-    width: 1170px;
     height: 35px;
-    padding-top: 15px;
-    margin-left: 20%;
+    margin-left: 1%;
+    margin-top: 15px;
+    margin-right: 1%;
 }
 
 .language{
